--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <img src="img/conversor.png" alt="Preview do Conversor" class="project-image">
-                    <h3>Projeto: Conversor de Temperatura<h3>
+                    <h3>Projeto: Conversor de Temperatura</h3>
                     <p>Este é um conversor de unidades de temperatura, construído em HTML, CSS e JavaScript.</p>
                     <div class="tech-icons">
                         <i class="fab fa-html5" title="HTML5"></i>
